# docs/swagger.json
@@ -53,8 +53,8 @@
                 "summary": "Pokemon Scan V2",
                 "parameters": [
                     {
-                        "description": "PokemonScan2",
-                        "name": "decoder.ApiPokemonScan2",
+                        "description": "Pokemon Scan2",
+                        "name": "scan",
                         "in": "body",
                         "required": true,
                         "schema": {
